<resources>
    <string name="app_name">Food Lick</string>
    <string name="home">Home</string>
    <string name="deliciousness_at_your_fingertips">Deliciousness at your fingertips</string>
    <string name="deliciousness_at_your_fingertips_new">Deliciousness at your fingertips!!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now!</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">5081349f1c31e8</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_preferences">RestauantPreferences</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_from">Ordering Form</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below</string>
    <string name="no_orders_placed">No orders placed</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="hello_user">Hello User!</string>
    <string name="choose_from_menu_listed_below">Choose Menu From Below</string>
    <string name="proceed_to_cart_btn">Proceed to cart</string>
    <string name="food_lick">Food Lick</string>
    <string name="paneer_masala">Paneer Butter Masala</string>
    <string name="rs_200">Rs.200</string>
    <string name="rs_300_person">Rs 300/person</string>
    <string name="bhengan_batata">Bhengan Batata</string>
    <string name="add_to_cart_btn">Add to Cart</string>
    <string name="can_t_find_any_restaurant_with_that_name">Sorry can\'t find any restaurant with that name</string>
    <string name="q1">How long will my order take to get delivered?</string>
    <string name="ans1">Dear user, your order will be delivered within 45 min, if any queries please contact us at foodLick@app.com, or call us at +91 1111111111</string>
    <string name="q2">How are we different from other food ordering apps?</string>
    <string name="ans2">We here at foodLick strive to provide you with the best quality food, the restaurants listed in our app, under go rigorous checking of hygiene on a daily basis, we make sure that the best food reaches you.</string>
    <string name="q3">What is the delivery charge?</string>
    <string name="q4">How do I know my order is confirmed?</string>
    <string name="ans4">We will send you a order confirmation once we receive your order.</string>
    <string name="ans3">We deliver to you free of charge 😁</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits_new">Mobile Number(10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_4">Password(Min 4)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="register">Register</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="sort">sort</string>
</resources>