<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.FaqsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtFAQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q1"
                android:textColor="#e53935"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txtFAQA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ans1"
                android:textColor="@color/black"
                android:textSize="21sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q2"
                android:textColor="#e53935"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewFAQA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ans2"
                android:textColor="@color/black"
                android:textSize="21sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q3"
                android:textColor="#e53935"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewFAQA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ans3"
                android:textColor="@color/black"
                android:textSize="21sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q4"
                android:textColor="#e53935"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textViewFAQA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ans4"
                android:textColor="@color/black"
                android:textSize="21sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>



