<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bright"
    tools:context="fragment.LoginFragment">


    <RelativeLayout
        android:id="@+id/fragment_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAppIcon"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner_search"
            android:drawableStart="@drawable/ic_phone_number"
            android:drawablePadding="4dp"
            android:hint="@string/mobile_number_10_digits_new"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"

            android:background="@drawable/rounded_corner_search"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="4dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="#e53935"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>